--- a/manifest.yml
+++ b/manifest.yml
@@ -9,3 +9,6 @@ modules:
       handler: index.run
 app:
   id: ari:cloud:ecosystem::app/2b4a285a-d9d3-4214-8a96-6fc6207c2397
+permissions:
+  scopes:
+    - read:jira-work
